XWIKI-10881: Introduce a proper "webjars" type instead of reusing the "bin" type * Fixed missing dependency

--- a/xwiki-platform-core/xwiki-platform-webjars/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-webjars/pom.xml
@@ -77,6 +77,13 @@
       <artifactId>xwiki-platform-url-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- Required at runtime! -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-url-container</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <!-- Used to determine the Content Type of the requested resource. -->
       <groupId>org.apache.tika</groupId>
