--- a/xwiki-platform-core/xwiki-platform-web/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-web/pom.xml
@@ -35,6 +35,18 @@
     <!-- Don't run CLIRR on this module since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>requirejs</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <!-- Javascript and CSS files compression -->
@@ -130,22 +142,45 @@
         <artifactId>jasmine-maven-plugin</artifactId>
         <executions>
           <execution>
+            <id>non-amd</id>
             <goals>
               <goal>test</goal>
             </goals>
+            <configuration>
+              <sourceIncludes>
+                <include>js/prototype/prototype.js</include>
+                <include>uicomponents/widgets/list/xlist.js</include>
+                <include>uicomponents/suggest/suggest.js</include>
+                <include>uicomponents/model/entityReference.js</include>
+              </sourceIncludes>
+              <specIncludes>
+                <include>non-amd/**/*.js</include>
+              </specIncludes>
+            </configuration>
+          </execution>
+          <execution>
+            <!-- Tests for JavaScript code that follows the Asynchronous Module Definition pattern -->
+            <id>amd</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <specRunnerTemplate>REQUIRE_JS</specRunnerTemplate>
+              <customRunnerConfiguration>
+                ${project.basedir}/src/test/resources/jasmine-require-config.txt
+              </customRunnerConfiguration>
+              <preloadSources>
+                <source>webjars/require.js</source>
+              </preloadSources>
+              <specIncludes>
+                <include>amd/**/*.js</include>
+              </specIncludes>
+            </configuration>
           </execution>
         </executions>
         <configuration>
-          <sourceIncludes>
-            <include>js/prototype/prototype.js</include>
-            <include>uicomponents/widgets/list/xlist.js</include>
-            <include>uicomponents/suggest/suggest.js</include>
-            <include>uicomponents/model/entityReference.js</include>
-          </sourceIncludes>
-          <specIncludes>
-            <include>spec/**/*.js</include>
-          </specIncludes>
           <jsSrcDir>${project.basedir}/src/main/webapp/resources</jsSrcDir>
+          <timeout>10</timeout>
         </configuration>
       </plugin>
     </plugins>
