XWIKI-12055: Display the diff summary before the extension changes * Don't show the 'name' and 'unmodifiable' meta properties (the first is redundant and the second is not used) * Enhance diff summary on xwiki:dom:updated (e.g. when the extension display is updated) * Display the pretty name for the document and attachment properties

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1422,6 +1422,7 @@ core.captcha.image.alternateText=There is supposed to be an image captcha here, 
 
 # History
 web.history.changes.summary=Summary
+web.history.changes.summary.documents=Showing {0}{1} changed {1,choice,1#document|1<documents}{2}
 web.history.changes.summary.documentProperties=Page properties
 web.history.changes.summary.attachments=Attachments
 web.history.changes.summary.objects=Objects
@@ -1429,13 +1430,16 @@ web.history.changes.summary.classProperties=Class properties
 web.history.changes.summary.modifiedAddedRemoved={0} modified, {1} added, {2} removed
 web.history.changes.noChanges=No changes
 web.history.changes.details=Details
+web.history.changes.document.title=Title
+web.history.changes.document.parent=Parent
+web.history.changes.document.hidden=Hidden
+web.history.changes.document.defaultLocale=Default language
+web.history.changes.document.syntax=Syntax
 web.history.changes.document.content=Content
-web.history.changes.attachment.author=Author
 web.history.changes.attachment.size=Size
 web.history.changes.attachment.content=Content
 web.history.changes.attachment.noContentChanges=This is not a text file or the file is too large
 web.history.changes.privateInformation=Private information
-web.history.changes.lineEndings=Only the line endings have changed
 
 core.viewers.diff.title=Changes for document <a href="{1}">{0}</a>
 core.viewers.diff.from=From version {0}
@@ -1444,16 +1448,6 @@ core.viewers.diff.editedBy=edited by {0}
 core.viewers.diff.editedOn=on {0}
 core.viewers.diff.editComment=Change comment: 
 core.viewers.diff.noEditComment=There is no comment for this version
-core.viewers.diff.metadata.author=Author
-core.viewers.diff.metadata.parent=Parent
-core.viewers.diff.metadata.language=Language
-core.viewers.diff.metadata.defaultLanguage=Default language
-core.viewers.diff.metadata.title=Title
-core.viewers.diff.metadata.name=Name
-core.viewers.diff.metadata.web=Space
-core.viewers.diff.metadata.space=Space
-core.viewers.diff.metadata.hidden=Hidden
-core.viewers.diff.metadata.syntax=Syntax
 
 ####################
 # Macros
@@ -4913,6 +4907,27 @@ changes.noclasseschanges=No Class Changes
 
 search.page.bar.query.label=Query
 platform.appwithinminutes.appHomePageTitle={0} Home
+
+### History
+web.history.changes.attachment.author=Author
+web.history.changes.lineEndings=Only the line endings have changed
+
+#@deprecated web.history.changes.document.title
+core.viewers.diff.metadata.title=Title
+#@deprecated web.history.changes.document.parent
+core.viewers.diff.metadata.parent=Parent
+#@deprecated web.history.changes.document.hidden
+core.viewers.diff.metadata.hidden=Hidden
+#@deprecated web.history.changes.document.defaultLocale
+core.viewers.diff.metadata.defaultLanguage=Default language
+#@deprecated web.history.changes.document.syntax
+core.viewers.diff.metadata.syntax=Syntax
+
+core.viewers.diff.metadata.author=Author
+core.viewers.diff.metadata.language=Language
+core.viewers.diff.metadata.name=Name
+core.viewers.diff.metadata.web=Space
+core.viewers.diff.metadata.space=Space
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
