--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -543,6 +543,7 @@
     <module>xwiki-platform-feed</module>
     <module>xwiki-platform-filter</module>
     <module>xwiki-platform-flamingo</module>
+    <module>xwiki-platform-flavor</module>
     <module>xwiki-platform-formula</module>
     <module>xwiki-platform-git</module>
     <module>xwiki-platform-groovy</module>
