--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -499,6 +499,8 @@
             <exclude>com/xpn/xwiki/plugin/charts/wizard/DatasourceDefaultsHelper</exclude>
             <!-- Young API. Large refactoring for adding the ability to register new URL Resource Types -->
             <exclude>**/org/xwiki/resource/**</exclude>
+            <!-- Young API. Rename MimeMessageWrapper into ScriptMimeMessage (not a wrapper anymore) -->
+            <exclude>**/org/xwiki/mail/script/**</exclude>
           </excludes>
         </configuration>
       </plugin>
