--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -437,7 +437,8 @@
             <exclude>**/internal/**</exclude>
             <exclude>**/test/**</exclude>
             <!-- Remove the following excludes after we release the current version as final -->
-            <!-- We refactored the client code of the WYSIWYG editor to use the new tree. -->
+            <!-- Young API. Rename MimeMessageWrapper into ScriptMimeMessage (not a wrapper anymore) -->
+            <exclude>**/org/xwiki/mail/script/**</exclude>
           </excludes>
         </configuration>
       </plugin>
