XWIKI-12070: Introduce a flavor picker.
* Fix translations.

--- a/xwiki-platform-core/xwiki-platform-flavor/xwiki-platform-flavor-api/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-flavor/xwiki-platform-flavor-api/src/main/resources/ApplicationResources.properties
@@ -18,7 +18,7 @@
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 # ---------------------------------------------------------------------------
 
-flavor.selector.noflavor=No flavor, let the wiki empty.
+flavor.selector.noflavor=No Flavor, let the wiki be empty.
 flavor.selector.authorsBy=By
 flavor.selector.website=Website
 flavor.selector.ajaxError=Connexion error. Failed to get the list of flavors.
