XWIKI-12090: Clone the ExecutionContext when the mail message is added to the prepare queue - ExecutionContext cloning is now done in DefaultMailSender.sendAsynchronously() - ExecutionContext cloning is moved to a specialized component -- it probably needs a better location, but for now, it is in the mail module - Simplified MailQueueItem; only PrepareMailQueueItem knows about the ExecutionContext. - The prepare thread uses the execution context of a PrepareMailQueueItem, while the send thread uses a single execution context, set up at the beginning. - Fixed tests
(cherry picked from commit 5f81f52fffed372eb099da3eaeb2d243c8e98689)

Conflicts:
	xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-default/pom.xml
	xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-default/src/test/java/org/xwiki/mail/integration/AuthenticatingIntegrationTest.java
	xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-default/src/test/java/org/xwiki/mail/integration/ScriptingIntegrationTest.java

--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-default/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-default/pom.xml
@@ -82,8 +82,7 @@
          (e.g. DefaultXWikiStubContextProvider) -->
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <scope>test</scope>
+      <artifactId>javax.servlet-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
