XWIKI-12086: Allow displaying the time spend in various elements of the rendered page * ignore internal script service

--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -713,6 +713,7 @@
               **/internal/model/reference/CurrentStringEntityReferenceResolver.java,
               **/internal/observation/remote/converter/AbstractXWikiEventConverter.java,
               **/internal/observation/remote/converter/ActionExecutionEventConverter.java,
+              **/internal/script/DebugScriptService.java,
               **/internal/skin/*.java,
               **/internal/template/InternalTemplateManager.java,
               **/internal/template/TemplateEnvironmentResource.java,
