XWIKI-11504: Extension Manager / Distribution wizard should create a downloadable file with all the decisions taken/changes made during the execution XWIKI-11505: Allow EM/DW to re-play an upgrade/install from a file of decisions provided by the user

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3910,6 +3910,12 @@ platform.extension.distributionWizard.extension.outdatedextensionsStepTitle=Exte
 platform.extension.distributionWizard.extension.outdatedextensionsStepSummary=Update the installed extensions
 platform.extension.distributionWizard.extensionsStepDescription=Extensions provide additional features on top of the XWiki runtime. They are commonly distributed as XARs (e.g. {0}XWiki applications{1}, {2}wiki macros{3}, {4}color themes{5}) and JARs (server side code including especially {6}components{7} and {8}script services{9}).
 
+extension.history=Extension History
+extension.history.noRecords=No history records found.
+extension.history.record.installBy=Installed by {0} on {1}
+extension.history.record.uninstallBy=Uninstalled by {0} on {1}
+extension.history.record.repairxarBy=Repaired by {0} on {1}
+
 ### Logging Application Resources
 admin.logging=Logging
 logging.admin.intro=Here you can review and modify the log level associated to a registered logger. <default> or empty log level means that the logger inherits from it's parent logger which is the package prefix when it's a package or the default level in the logger implementation configuration if there is no parent.
