XWIKI-11741: Allow selecting a flavor in Distribution Wizard.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3913,6 +3913,10 @@ platform.extension.distributionWizard.flavorStepDistributionLabel=Distribution
 platform.extension.distributionWizard.flavorStepDistributionHint=The following distribution has been detected:
 platform.extension.distributionWizard.flavorStepCurrentFlavorLabel=The current flavor
 platform.extension.distributionWizard.flavorStepNewFlavorLabel=Install a new flavor
+platform.extension.distributionWizard.flavorStepSelectOtherFlavor=Select other flavor
+platform.extension.distributionWizard.flavorStepConfirm=You are about to install the following flavor, please confirm or select an other flavor.
+platform.extension.distributionWizard.flavorStepNoFlavorConfirm=You have chosen to let the wiki be empty, please confirm or go back.
+platform.extension.distributionWizard.flavorStepNoFlavorBack=Back and select a flavor
 
 platform.extension.distributionWizard.extension.flavor.wikisStepTitle=Wikis
 platform.extension.distributionWizard.extension.flavor.wikisStepSummary=Update the flavor on each of the existing wikis that needs it (except for the main wiki which is handled in the first step).
