--- a/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-io/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-io/pom.xml
@@ -62,6 +62,15 @@
       <artifactId>xwiki-commons-observation-api</artifactId>
       <version>${commons.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-wiki-default</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    
+    <!-- Test dependencies -->
     <!-- For some tests we need to have the Servlet API JAR available -->
     <dependency>
       <groupId>javax.servlet</groupId>
