XWIKI-11504: Extension Manager / Distribution wizard should create a downloadable file with all the decisions taken/changes made during the execution XWIKI-11505 Allow EM/DW to re-play an upgrade/install from a file of decisions provided by the user * Add a script service method to deserialize a list of history records given as a String * Display the most recent records first (for an imported history source) * AJAX pagination (more records link) * Export the oldest history records first * Add replay options form (for users having PR) * Add replay plan display

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3928,9 +3928,12 @@ platform.extension.distributionWizard.extensionsStepDescription=Extensions provi
 
 extension.history=Extension History
 extension.history.noRecords=No history records found.
-extension.history.record.installBy=Installed by {0} on {1}
-extension.history.record.uninstallBy=Uninstalled by {0} on {1}
-extension.history.record.repairxarBy=Repaired by {0} on {1}
+extension.history.record.installUserAndDate=Installed by {0} on {1}
+extension.history.record.uninstallUserAndDate=Uninstalled by {0} on {1}
+extension.history.record.repairxarUserAndDate=Repaired by {0} on {1}
+extension.history.record.installUser=Installed by {0}
+extension.history.record.uninstallUser=Uninstalled by {0}
+extension.history.record.repairxarUser=Repaired by {0}
 
 ### Logging Application Resources
 admin.logging=Logging
