--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -425,7 +425,7 @@ parentfield=Parent
 editingClass=Editing class
 properties=Properties
 classEditorIntro=Welcome to the Class Editor
-remembermeonthiscomp=Remember me on this computer
+remembermeonthiscomp=Remember me
 saveandcontinue=Save &amp; Continue
 saveandview=Save &amp; View
 
