--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-tour</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>Tour Application</name>
   <description>This application provides for the users a possibility to create bootstrap-tours for every page they want.</description>
@@ -45,7 +45,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/application-tour.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/application-tour.git</developerConnection>
     <url>https://github.com/xwiki-contrib/application-tour</url>
-    <tag>application-tour-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
    <repository>
