--- a/pom.xml
+++ b/pom.xml
@@ -26,15 +26,14 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-pom</artifactId>
-    <version>5.4.1</version>
+    <version>6.4</version>
   </parent>
-
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-tour</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>Tour Application</name>
-  <description>This application provides for the users a possibility to create bootstrap-tours for every page they want.</description>
+  <description>This application provides for the users a possibility to create tour guides for every page they want.</description>
   <developers>
     <developer>
       <id>gabrielasmeria</id>
@@ -57,7 +56,6 @@
   <properties>
    <!-- Don't run CLIRR here since there's no Java code. -->
    <xwiki.clirr.skip>true</xwiki.clirr.skip>
-   <xwiki.extension.features>fveron:ideas</xwiki.extension.features>
   </properties>
   <build>
     <extensions>
